# google-kaggle-5day-intensive

./: .gitignore  README.md
Final Project/: .env.example  HOW_TO_ACTIVATE.txt  README.md  capstone_helpdesk_agent.ipynb
Final Project/helpdesk-agent/: .env.example  GEMINI.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
Final Project/helpdesk-agent/app/: agent.py  fast_api_app.py  kb_mcp_server.py
Final Project/helpdesk-agent/tests/: test_agent.py
Final Project/supervisor-dashboard/: .env.example  main.py  pyproject.toml
Final Project/supervisor-dashboard/templates/: index.html
day-0/: README.md
day-1/: README.md
day-1/atmospheric-effects-showcase/: index.html
day-1/atmospheric-effects-showcase/assets/: index-BPpwOeff.js  index-Czho80kw.css
day-2/: google-cloud-ai-apis.md
day-2/agents-playground/customer_support_agent/: .env.example  main.py  test_agent.py
day-2/customer_support_web/: app.py
day-2/customer_support_web/templates/: index.html
day-2/skills-playground/: product.json
day-2/skills-playground/git_test/: auth.py
day-3/: README.md
day-3/agents-playground/customer_support_agent/: agent.py
day-3/customer_support_web/: agent.py  requirements.txt
day-4/: README.md
day-4/ambient-expense-agent/: Makefile  agents-cli-manifest.yaml
day-4/ambient-expense-agent/app/: agent.py  fast_api_app.py
day-4/shopping-assistant/: .pre-commit-config.yaml  agents-cli-manifest.yaml  pyproject.toml
day-5/: Day_5_Assignment.txt  README.md
day-5/expense-agent-system/: .env.example  HOW_TO_ACTIVATE.txt
day-5/expense-agent-system/expense-agent/: agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
day-5/expense-agent-system/expense-agent/app/: agent.py  agent_runtime_app.py  fast_api_app.py
day-5/expense-agent-system/expense-agent/app/app_utils/: telemetry.py  typing.py
day-5/expense-agent-system/expense-agent/tests/: test_agent.py
day-5/expense-agent-system/manager-dashboard/: .env.example  main.py  pyproject.toml
day-5/expense-agent-system/manager-dashboard/templates/: index.html
(+10 files in other folders)
