[project]
name = "manager-dashboard"
version = "0.1.0"
description = "Day 5 — Expense approval dashboard (FastAPI + Cloud Run)"
authors = [
    {name = "Jared Lomeli", email = "jared.lomeli@sjsu.edu"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-auth>=2.29.0",
]
requires-python = ">=3.11,<3.15"

